# KHUSLA

install/camera_perception_pkg/share/camera_perception_pkg/: package.sh  package.xml
install/debug_pkg/lib/debug_pkg/: gps_path_visualizer_node  yolo_visualizer_node
install/debug_pkg/share/debug_pkg/: package.sh  package.xml
install/decision_making_pkg/lib/decision_making_pkg/: motion_planner  path_planner
install/decision_making_pkg/share/decision_making_pkg/: package.sh  package.xml
install/gps_path/lib/gps_path/: gps_centerline_node
install/gps_path/share/gps_path/: package.dsv  package.ps1  package.sh  package.xml
install/gps_path/share/gps_path/data/: left_lane.csv  right_lane.csv
install/gps_path/share/gps_path/launch/: gps_centerline.launch.py
install/lidar_perception_pkg/share/lidar_perception_pkg/: package.sh  package.xml
install/serial_communication_pkg/share/serial_communication_pkg/: package.sh  package.xml
log/: latest_build
src/debug_pkg/: package.xml  setup.py
src/debug_pkg/debug_pkg/: gps_path_visualizer_node.py
src/decision_making_pkg/: package.xml  setup.py
src/decision_making_pkg/decision_making_pkg/: motion_planner_node.py  path_planner_node.py
src/decision_making_pkg/resource/: decision_making_pkg
src/interfaces_pkg/: package.xml
src/mobile_robot/: CMakeLists.txt
src/mobile_robot/launch/: gazebo_model.launch.py
src/mobile_robot/parameters/: ekf_global.yaml  ekf_local.yaml  navsat.yaml
src/mobile_robot/scripts/: worldpose_to_navsat.py
